--- a/Movie/Areas/Admin/Views/Films/Delete.cshtml
+++ b/Movie/Areas/Admin/Views/Films/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Movie.Models.Film
 
 @{
-    ViewBag.Title = "Xóa Phim";
+    ViewBag.Title = "Xóa Phản Hồi";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
