--- a/Movie/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/Movie/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -79,7 +79,7 @@
                 <div class="modal-body">Chọn "Đăng xuất" bên dưới nếu bạn đã thực sự muốn thoát.</div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Trở lại</button>
-                    <a class="btn btn-primary" href="Logout">Đăng xuất</a>
+                    <a class="btn btn-primary" href="@Url.Action("Index","Logout")">Đăng xuất</a>
                 </div>
             </div>
         </div>
