--- a/Movie/Areas/Admin/Views/Shared/_Menu.cshtml
+++ b/Movie/Areas/Admin/Views/Shared/_Menu.cshtml
@@ -82,7 +82,7 @@
         </a>
         <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
             <div class="bg-white py-2 collapse-inner rounded">
-                <a class="collapse-item" href="@Url.Action("Index","Accounts","Admin")"><i class="fas fa-user-plus"></i> &nbsp; Người Dùng</a>
+                <a class="collapse-item" href="@Url.Action("IndexUser","Accounts","Admin")"><i class="fas fa-user-plus"></i> &nbsp; Người Dùng</a>
                 <a class="collapse-item" href="@Url.Action("Index","Accounts","Admin")"><i class="fas fa-list-alt"></i>&nbsp; Quản Trị</a>
             </div>
         </div>
