--- a/Movie/Views/Home/Index.cshtml
+++ b/Movie/Views/Home/Index.cshtml
@@ -46,7 +46,7 @@
                 {
                     <div class="item">
                         <div class="w3l-movie-gride-agile w3l-movie-gride-agile1">
-                            <a href="single.html" class="hvr-shutter-out-horizontal">
+                            <a href="@Url.Action("ViewFilm","ViewFilm" ,new { id=item.Id})" class="hvr-shutter-out-horizontal">
                                 <img src="@item.Avartar" title="album-name" class="img-responsive" alt=" " />
                                 <div class="w3l-action-icon"><i class="fa fa-play-circle" aria-hidden="true"></i></div>
                             </a>
