--- a/Movie/Areas/Admin/Views/About_Us/Create.cshtml
+++ b/Movie/Areas/Admin/Views/About_Us/Create.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Movie.Models.About_Us
-
+@{
+    var admin = Session["admin"] as Movie.Models.Account;
+}
 @{
     ViewBag.Title = "Thêm Giới Thiệu";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
@@ -16,7 +18,7 @@
         </div>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-           <div class="form-group row">
+        <div class="form-group row">
             <label class="control-label col-md-2 col-form-label">Bản Đồ</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Map, new { htmlAttributes = new { @class = "form-control" } })
@@ -66,18 +68,18 @@
             </div>
         </div>
 
-        <div class="form-group row">
+        @*<div class="form-group row">
             <label class="control-label col-md-2 col-form-label">Ngày Tạo</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CreateDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CreateDate, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group row">
             <label class="control-label col-md-2 col-form-label">Người Tạo</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CreateBy, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.CreateBy, new { @class = "form-control", @Value = @admin.Name })
                 @Html.ValidationMessageFor(model => model.CreateBy, "", new { @class = "text-danger" })
             </div>
         </div>
