--- a/Movie/Areas/Admin/Views/About_Us/Edit.cshtml
+++ b/Movie/Areas/Admin/Views/About_Us/Edit.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Movie.Models.About_Us
-
+@{
+    var admin = Session["admin"] as Movie.Models.Account;
+}
 @{
     ViewBag.Title = "Sửa Giới Thiệu";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
@@ -19,7 +21,7 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group row">
-            <label class = "control-label col-md-2 col-form-label">Bản Đồ</label>
+            <label class="control-label col-md-2 col-form-label">Bản Đồ</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Map, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Map, "", new { @class = "text-danger" })
@@ -69,17 +71,9 @@
         </div>
 
         <div class="form-group row">
-            <label class="control-label col-md-2 col-form-label">Ngày Tạo</label>
+            <label class="control-label col-md-2 col-form-label">Người Sửa</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CreateDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CreateDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label class="control-label col-md-2 col-form-label">Người Tạo</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CreateBy, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.CreateBy, new { @class = "form-control", @Value = @admin.Name })
                 @Html.ValidationMessageFor(model => model.CreateBy, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -89,5 +83,5 @@
                 <input type="submit" value="Thay Đổi" class="btn btn-primary" />
             </div>
         </div>
-        </form>
-    }
+    </form>
+}
