--- a/Movie/Areas/Admin/Views/Accounts/Edit.cshtml
+++ b/Movie/Areas/Admin/Views/Accounts/Edit.cshtml
@@ -1,10 +1,25 @@
 ﻿@model Movie.Models.Account
-
+@{
+    var admin = Session["admin"] as Movie.Models.Account;
+}
 @{
     ViewBag.Title = "Sửa Tài Khoản";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
-
+@section jsFooter{
+    <script>
+        $('#btnSelectImage').on('click', function (e) {
+            e.preventDefault();
+            var finder = new CKFinder();
+            finder.selectActionFunction = function (url) {
+                $('#txtImage').val(url);
+            };
+            finder.popup();
+        })
+        var editor = CKEDITOR.replace('txtContent', {
+            customConfig: '/assets/admin/js/plugins/ckeditor/config.js',
+        });</script>
+}
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -20,9 +35,10 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group row">
-            <label class = "control-label col-md-2 col-form-label">Avartar</label>
+            <label class="control-label col-md-2 col-form-label">Avartar</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Avartar, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.Avartar, new { htmlAttributes = new { @class = "form-control" }, id = "txtImage" })
+                <a id="btnSelectImage">Chọn ảnh</a>
                 @Html.ValidationMessageFor(model => model.Avartar, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -46,7 +62,7 @@
         <div class="form-group row">
             <label class="control-label col-md-2 col-form-label">Mật Khẩu</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.PasswordFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -80,17 +96,9 @@
         </div>
 
         <div class="form-group row">
-            <label class="control-label col-md-2 col-form-label">Ngày Tạo</label>
+            <label class="control-label col-md-2 col-form-label">Người Sửa</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CreateDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CreateDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label class="control-label col-md-2 col-form-label">Người Tạo</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CreateBy, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.CreateBy, new { @class = "form-control", @Value = @admin.Name })
                 @Html.ValidationMessageFor(model => model.CreateBy, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -100,6 +108,6 @@
                 <input type="submit" value="Thay Đổi" class="btn btn-primary" />
             </div>
         </div>
-        </form>
-    }
+    </form>
+}
 
