--- a/Movie/Areas/Admin/Views/Accounts/Index.cshtml
+++ b/Movie/Areas/Admin/Views/Accounts/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<Movie.Models.Account>
-
+@{
+    var admin = Session["admin"] as Movie.Models.Account;
+}
 @{
     ViewBag.Title = "Danh Sách Tài Khoản";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
@@ -26,6 +28,9 @@
                         Ngày Tạo
                     </th>
                     <th>
+                        Người Tạo
+                    </th>
+                    <th>
                         Trạng Thái
                     </th>
                     <th>Tác Vụ</th>
@@ -36,31 +41,45 @@
                 {
                 <tr>
                     <td class="text-center">
-                        <img src="@Html.DisplayFor(modelItem => item.Avartar)" style="width:50px" alt="Alternate Text" />
+                        <img src="@Html.DisplayFor(modelItem => item.Avartar)" style="width:50px" alt="Avartar" />
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Email)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.Class)
+
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.CreateDate)
                     </td>
                     <td>
+                        @Html.DisplayFor(modelItem => item.CreateBy)
+                    </td>
+                    <td>
                         @Html.DisplayFor(modelItem => item.Status)
                     </td>
                     <td>
-                        <a href="@Url.Action("Details","Accounts" ,new { id=item.Id})" title="Chi Tiết"><i class="fas fa-info-circle" style="font-size: 1.6rem;color: rgb(17, 0, 255);"></i></a>
-                        <a href="@Url.Action("Edit","Accounts" ,new { id=item.Id})" title="Sửa"><i class="fas fa-edit" style="font-size: 1.5rem; color: rgb(0, 255, 0);"></i></a>
-                        <a href="@Url.Action("Delete","Accounts" ,new { id=item.Id})" title="Xóa"><i class="fas fa-trash-alt" style="font-size:1.5rem ; color: rgb(250, 115, 115);"></i></a>
+                        @if (admin.Class == true)
+                        {
+                            <a href="@Url.Action("Details","Accounts" ,new { id=item.Id})" title="Chi Tiết"><i class="fas fa-info-circle" style="font-size: 1.6rem;color: rgb(17, 0, 255);"></i></a>
+                            <a href="@Url.Action("Edit","Accounts" ,new { id=item.Id})" title="Sửa" class="mx-2"><i class="fas fa-edit" style="font-size: 1.5rem; color: rgb(0, 255, 0);"></i></a>
+                            <a href="@Url.Action("Delete", "Accounts", new { id = item.Id })" title="Xóa"><i class="fas fa-trash-alt" style="font-size:1.5rem ; color: rgb(250, 115, 115);"></i></a>
+                        }
+                        else
+                        {
+                            <span>Không quyền hạn</span>
+                        }
                     </td>
                 </tr>
                 }
             </tbody>
         </table>
-        <span class="btn btn-primary pt-2">
-            @Html.ActionLink("Thêm Người Quản Trị", "Create")
-        </span>
+        @if (admin.Class == true)
+        {
+            <span class="btn btn-primary pt-2">
+                @Html.ActionLink("Thêm Người Quản Trị", "Create")
+            </span>
+        }
     </div>
 </div>
