--- a/Movie/Areas/Admin/Views/Contacts/Create.cshtml
+++ b/Movie/Areas/Admin/Views/Contacts/Create.cshtml
@@ -1,10 +1,26 @@
 ﻿@model Movie.Models.Contact
-
+@{
+    var admin = Session["admin"] as Movie.Models.Account;
+}
 @{
     ViewBag.Title = "Thêm Liên Hệ";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
+@section jsFooter{
+    <script>
+        $('#btnSelectImage').on('click', function (e) {
+            e.preventDefault();
+            var finder = new CKFinder();
+            finder.selectActionFunction = function (url) {
+                $('#txtImage').val(url);
+            };
+            finder.popup();
+        })
+        var editor = CKEDITOR.replace('txtContent', {
+            customConfig: '/assets/admin/js/plugins/ckeditor/config.js',
+        });</script>
+}
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -17,10 +33,11 @@
         </div>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-           <div class="form-group row">
+        <div class="form-group row">
             <label class="control-label col-md-2 col-form-label">Logo</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Logo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.Logo, new { htmlAttributes = new { @class = "form-control" }, id = "txtImage" })
+                <a id="btnSelectImage">Chọn Ảnh</a>
                 @Html.ValidationMessageFor(model => model.Logo, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -75,13 +92,13 @@
             </div>
         </div>
 
-        <div class="form-group row">
+        @*<div class="form-group row">
             <label class="control-label col-md-2 col-form-label">Ngày Tạo</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CreateDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.CreateBy, new { @class = "form-control", @Value = @admin.Name })
                 @Html.ValidationMessageFor(model => model.CreateDate, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group row">
             <label class="control-label col-md-2 col-form-label">Người Tạo</label>
