--- a/Movie/Areas/Admin/Views/Films/Create.cshtml
+++ b/Movie/Areas/Admin/Views/Films/Create.cshtml
@@ -1,12 +1,14 @@
 ﻿@model Movie.Models.Film
-
+@{
+    var admin = Session["admin"] as Movie.Models.Account;
+}
 @{
     ViewBag.Title = "Thêm Phim";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 @section jsFooter{
     <script>
-$('#btnSelectImage').on('click', function (e) {
+        $('#btnSelectImage').on('click', function (e) {
             e.preventDefault();
             var finder = new CKFinder();
             finder.selectActionFunction = function (url) {
@@ -14,14 +16,14 @@ $('#btnSelectImage').on('click', function (e) {
             };
             finder.popup();
         })
-     $('#btnSelectImage1').on('click', function (e) {
-        e.preventDefault();
-        var finder = new CKFinder();
-        finder.selectActionFunction = function (url) {
-            $('#txtImage1').val(url);
-        };
-        finder.popup();
-    })
+        $('#btnSelectImage1').on('click', function (e) {
+            e.preventDefault();
+            var finder = new CKFinder();
+            finder.selectActionFunction = function (url) {
+                $('#txtImage1').val(url);
+            };
+            finder.popup();
+        })
         var editor = CKEDITOR.replace('txtContent', {
             customConfig: '/assets/admin/js/plugins/ckeditor/config.js',
         });</script>
@@ -58,7 +60,7 @@ $('#btnSelectImage').on('click', function (e) {
         <div class="form-group row">
             <label class="control-label col-md-2 col-form-label">Avartar</label>
             <div class="col-md-10">
-                @Html.TextBoxFor(model => model.Avartar, new { htmlAttributes = new { @class = "form-control" }, id= "txtImage" })
+                @Html.TextBoxFor(model => model.Avartar, new { htmlAttributes = new { @class = "form-control" }, id = "txtImage" })
                 <a id="btnSelectImage">Chọn Ảnh</a>
                 @Html.ValidationMessageFor(model => model.Avartar, "", new { @class = "text-danger" })
             </div>
@@ -67,7 +69,8 @@ $('#btnSelectImage').on('click', function (e) {
         <div class="form-group row">
             <label class="control-label col-md-2 col-form-label">Hình Nền</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Background, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.Background, new { htmlAttributes = new { @class = "form-control" }, id = "txtImage1" })
+                <a id="btnSelectImage1">Chọn Ảnh</a>
                 @Html.ValidationMessageFor(model => model.Background, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -79,7 +82,6 @@ $('#btnSelectImage').on('click', function (e) {
                 @Html.ValidationMessageFor(model => model.Year, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group row">
             <label class="control-label col-md-2 col-form-label">Chất Lượng</label>
             <div class="col-md-10">
@@ -178,18 +180,18 @@ $('#btnSelectImage').on('click', function (e) {
             </div>
         </div>
 
-        <div class="form-group row">
+        @*<div class="form-group row">
             <label class="control-label col-md-2 col-form-label">Ngày Tạo</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.CreateDate, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.CreateDate, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group row">
             <label class="control-label col-md-2 col-form-label">Người Tạo</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CreateBy, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.CreateBy, new { @class = "form-control", @Value = @admin.Name })
                 @Html.ValidationMessageFor(model => model.CreateBy, "", new { @class = "text-danger" })
             </div>
         </div>
