--- a/Movie/Areas/Admin/Views/Films/Index.cshtml
+++ b/Movie/Areas/Admin/Views/Films/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<Movie.Models.Film>
-
+@{
+    var admin = Session["admin"] as Movie.Models.Account;
+}
 @{
     ViewBag.Title = "Danh Sách Phim";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
@@ -42,7 +44,7 @@
                 {
                     <tr>
                         <td>
-                            <img src="@Html.DisplayFor(modelItem => item.Avartar)" alt="Avartar" style="width:50px" />
+                            <img src="@Html.DisplayFor(modelItem => item.Background)" alt="Avartar" style="width:70px" />
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Name)
@@ -64,8 +66,12 @@
                         </td>
                         <td>
                             <a href="@Url.Action("Details","Films" ,new { id=item.Id})" title="Chi Tiết"><i class="fas fa-info-circle" style="font-size: 1.6rem;color: rgb(17, 0, 255);"></i></a>
-                            <a href="@Url.Action("Edit","Films" ,new { id=item.Id})" title="Sửa"><i class="fas fa-edit" style="font-size: 1.5rem; color: rgb(0, 255, 0);"></i></a>
-                            <a href="@Url.Action("Delete","Films" ,new { id=item.Id})" title="Xóa"><i class="fas fa-trash-alt" style="font-size:1.5rem ; color: rgb(250, 115, 115);"></i></a>
+                            <a href="@Url.Action("Edit","Films" ,new { id=item.Id})" title="Sửa" class="mx-2"><i class="fas fa-edit" style="font-size: 1.5rem; color: rgb(0, 255, 0);"></i></a>
+                            @if (admin.Class ==true)
+                            {
+                                <a href="@Url.Action("Delete","Films" ,new { id=item.Id})" title="Xóa"><i class="fas fa-trash-alt" style="font-size:1.5rem ; color: rgb(250, 115, 115);"></i></a>
+
+                            }
                         </td>
                     </tr>
                 }
