--- a/Movie/Areas/Admin/Views/Footers/Edit.cshtml
+++ b/Movie/Areas/Admin/Views/Footers/Edit.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Movie.Models.Footer
-
+@{
+    var admin = Session["admin"] as Movie.Models.Account;
+}
 @{
     ViewBag.Title = "Sửa Footer";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
@@ -20,7 +22,7 @@
         @Html.HiddenFor(model => model.Id)
 
         <div class="form-group row">
-            <label class = "control-label col-md-2 col-form-label">Nội Dung</label>
+            <label class="control-label col-md-2 col-form-label">Nội Dung</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Text, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Text, "", new { @class = "text-danger" })
@@ -62,25 +64,17 @@
         </div>
 
         <div class="form-group row">
-            <label class="control-label col-md-2 col-form-label">Ngày Tạo</label>
+            <label class="control-label col-md-2 col-form-label">Người Sửa</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CreateDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CreateDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <label class="control-label col-md-2 col-form-label">Người Tạo</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CreateBy, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.CreateBy, new { @class = "form-control", @Value = @admin.Name })
                 @Html.ValidationMessageFor(model => model.CreateBy, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group row">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Thay Đổi" class="btn btn-default" />
+                <input type="submit" value="Thay Đổi" class="btn btn-primary" />
             </div>
         </div>
-        </form>
-    }
+    </form>
+}
