--- a/Movie/Areas/Admin/Views/Menus/Index.cshtml
+++ b/Movie/Areas/Admin/Views/Menus/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<Movie.Models.Menu>
-
+@{
+    var admin = Session["admin"] as Movie.Models.Account;
+}
 @{
     ViewBag.Title = "Danh Sách Menu";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
@@ -23,6 +25,9 @@
                         Ngày Tạo
                     </th>
                     <th>
+                        Người Tạo
+                    </th>
+                    <th>
                         Trạng Thái
                     </th>
                     <th>Tác Vụ</th>
@@ -31,25 +36,31 @@
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Text)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.DisplayOrder)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.CreateDate)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Status)
-                        </td>
-                        <td>
-                            <a href="@Url.Action("Details","Menus" ,new { id=item.Id})" title="Chi Tiết"><i class="fas fa-info-circle" style="font-size: 1.6rem;color: rgb(17, 0, 255);"></i></a>
-                            <a href="@Url.Action("Edit","Menus" ,new { id=item.Id})" title="Sửa"><i class="fas fa-edit" style="font-size: 1.5rem; color: rgb(0, 255, 0);"></i></a>
-                            <a href="@Url.Action("Delete","Menus" ,new { id=item.Id})" title="Xóa"><i class="fas fa-trash-alt" style="font-size:1.5rem ; color: rgb(250, 115, 115);"></i></a>
-                        </td>
-                    </tr>
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Text)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DisplayOrder)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CreateDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CreateBy)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Status)
+                    </td>
+                    <td>
+                        <a href="@Url.Action("Details","Menus" ,new { id=item.Id})" title="Chi Tiết"><i class="fas fa-info-circle" style="font-size: 1.6rem;color: rgb(17, 0, 255);"></i></a>
+                        <a href="@Url.Action("Edit","Menus" ,new { id=item.Id})" title="Sửa" class="mx-2"><i class="fas fa-edit" style="font-size: 1.5rem; color: rgb(0, 255, 0);"></i></a>
+                        @if (admin.Class == true)
+                        {
+                            <a href="@Url.Action("Delete", "Menus", new { id = item.Id })" title="Xóa"><i class="fas fa-trash-alt" style="font-size:1.5rem ; color: rgb(250, 115, 115);"></i></a>
+                        }
+                    </td>
+                </tr>
                 }
             </tbody>
         </table>
