--- a/Movie/Areas/Admin/Views/SubMenus/Edit.cshtml
+++ b/Movie/Areas/Admin/Views/SubMenus/Edit.cshtml
@@ -1,5 +1,7 @@
 ﻿@model Movie.Models.SubMenu
-
+@{
+    var admin = Session["admin"] as Movie.Models.Account;
+}
 @{
     ViewBag.Title = "Sửa Menu Con";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
@@ -18,13 +20,13 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
 
-    <div class="form-group">
-        <label class="control-label col-md-2 col-form-label">Nội Dung</label>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Text, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Text, "", new { @class = "text-danger" })
+        <div class="form-group">
+            <label class="control-label col-md-2 col-form-label">Nội Dung</label>
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Text, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Text, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
         <div class="form-group">
             <label class="control-label col-md-2 col-form-label"> Link thân thiện</label>
@@ -67,19 +69,10 @@
                 </div>
             </div>
         </div>
-
         <div class="form-group">
-            <label class="control-label col-md-2 col-form-label">Ngày Tạo</label>
+            <label class="control-label col-md-2 col-form-label">Người Sửa</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.CreateDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.CreateDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label class = "control-label col-md-2 col-form-label">Người Tạo</label>
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.CreateBy, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.CreateBy, new { @class = "form-control", @Value = @admin.Name })
                 @Html.ValidationMessageFor(model => model.CreateBy, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -89,5 +82,5 @@
                 <input type="submit" value="Thay  Đổi" class="btn btn-primary" />
             </div>
         </div>
-        </form>
-    }
+    </form>
+}
