--- a/Movie/Areas/Admin/Views/Accounts/Edit.cshtml
+++ b/Movie/Areas/Admin/Views/Accounts/Edit.cshtml
@@ -62,7 +62,7 @@
         <div class="form-group row">
             <label class="control-label col-md-2 col-form-label">Mật Khẩu</label>
             <div class="col-md-10">
-                @Html.PasswordFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
             </div>
         </div>
