--- a/Movie/Views/Shared/_LayoutPageSite.cshtml
+++ b/Movie/Views/Shared/_LayoutPageSite.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{
+    var user = Session["user"] as Movie.Models.Account;
+}
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -70,10 +73,10 @@
     <!-- start-smoth-scrolling -->
     <style>
         .ribben {
-            padding: 15px 0 0!important;
-            width:50px!important;
-            height:30px!important;
-            border-radius:5%!important;
+            padding: 15px 0 0 !important;
+            width: 50px !important;
+            height: 30px !important;
+            border-radius: 5% !important;
         }
     </style>
 </head>
@@ -83,7 +86,7 @@
     <div class="header">
         <div class="container">
             <div class="w3layouts_logo">
-                <a href="index.html">
+                <a href="@Url.Action("Index","Home")">
                     <h1>One<span>Movies</span></h1>
                 </a>
             </div>
@@ -94,13 +97,25 @@
                 </form>
             </div>
             <div class="w3l_sign_in_register">
-                <ul>
-                    <li><i class="fa fa-phone" aria-hidden="true"></i> (+000) 123 345 653</li>
-                    <li><a href="#" data-toggle="modal" data-target="#myModal">Login</a></li>
+                <ul style="display:flex">
+                    <li><i class="fa fa-phone" aria-hidden="true"></i> (+000) 123 345 65</li>
+
+                    @if (Session["user"] != null)
+                    {
+                        <li><a href="@Url.Action("Logout","Home")">Logout</a></li>
+                    }
+                    else
+                    {
+                        <li><a href="#" data-toggle="modal" data-target="#myModal">Login</a></li>
+                    }
                 </ul>
             </div>
             <div class="clearfix"> </div>
         </div>
+        @if (Session["user"] != null)
+        {
+            <div class="text-uppercase text-center"> Xin chào: @user.Name</div>
+        }
     </div>
     <!-- //header -->
     <!-- bootstrap-pop-up -->
@@ -120,24 +135,18 @@
                                     <div class="tooltip">Click Me</div>
                                 </div>
                                 <div class="form">
-                                    <h3>Login to your account</h3>
-                                    <form action="#" method="post">
-                                        <input type="text" name="Username" placeholder="Username" required="">
-                                        <input type="password" name="Password" placeholder="Password" required="">
-                                        <input type="submit" value="Login">
+                                    <h3>Đăng Nhập Tài Khoản</h3>
+                                    <form action="/Home/DoTask" method="post">
+                                        <input type="text" name="email" placeholder="Email" required="">
+                                        <input type="password" name="password" placeholder="Password" required="">
+                                        <span class="text-center text-danger"> @TempData["Ms"]</span>
+                                        <input type="submit" value="Đăng Nhập">
                                     </form>
                                 </div>
-                                <div class="form">
-                                    <h3>Create an account</h3>
-                                    <form action="#" method="post">
-                                        <input type="text" name="Username" placeholder="Username" required="">
-                                        <input type="password" name="Password" placeholder="Password" required="">
-                                        <input type="email" name="Email" placeholder="Email Address" required="">
-                                        <input type="text" name="Phone" placeholder="Phone Number" required="">
-                                        <input type="submit" value="Register">
-                                    </form>
-                                </div>
-                                <div class="cta"><a href="#">Forgot your password?</a></div>
+                                @{
+                                    Html.RenderAction("CreateUser", "Home");
+                                }
+                                <div class="cta"><a href="#">Quên Mật Khẩu?</a></div>
                             </div>
                         </div>
                     </div>
@@ -160,9 +169,9 @@
     </script>
     <!-- //bootstrap-pop-up -->
     <!-- nav -->
- @{ 
-     Html.RenderAction("Menu","Layout");
- }
+    @{
+        Html.RenderAction("Menu", "Layout");
+    }
     <!-- //nav -->
     <!-- banner -->
     @RenderBody()
@@ -182,7 +191,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 w3ls_footer_grid_right">
-                    <a href="index.html">
+                    <a href="@Url.Action("Index","Home")">
                         <h2>One<span>Movies</span></h2>
                     </a>
                 </div>
